# portfolio

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ctags.sh  index.html  main.c  package-lock.json  run.sh
public/: index.html  index.js  style.css
src/: CMakeLists.txt  ctags  main.c
src/controller/: CMakeLists.txt  controller.c  controller.h
src/file_handler/: CMakeLists.txt  file_handler.c  file_handler.h
src/utils/: dark-mode.js
styles/: style.css  utils.css
styles/components/: about.css  contact.css  featured.css  header.css  hero.css  mobile-nav.css  work.css
views/: index.html
